--- a/style.css
+++ b/style.css
@@ -1,144 +1,64 @@
-
+/* Base (Mobile View) */
 body {
-    background-color: #dedede;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
 
-h1 {
-    text-align: center;
-    font-family:Arial, sans-serif;
-    font-size: 32px;
+header, footer {
+  background-color: #f4f4f4;
+  padding: 10px;
 }
 
-a {
-    color: #000;
-    text-decoration: none;
-    font-family:Arial, sans-serif;
-}
-
-p {
-   font-size: 25px;
-   font-family:Arial, sans-serif;
-}
-
-img{
-  width:100%;
-}
-
-
-p{
-  text-align:center;
-}
-
-div img{
-    width:150px;
-    height: 150px;
-    display:block;
-    margin:auto;
-}
-
-div{
-  display: inline-block;
-  width: 24%;
-  margin: 5px;
-  padding: 2px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
 main {
-    border: 5px #000 solid;
-    margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
 }
- */
-/* 
 
-.container {
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-items: center;
+main > div {
+  width: 90vw;
+  margin: 10px;
+  padding: 10px;
+  background-color: #eee;
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
- */
-/* img{
-    width: 200px;
-    height: 200px;
-    padding: 5px;
-} */
 
-/* .child {
-    position: relative;
-    display: inline-block;
-    border: 5px black solid;
-    margin: 5px;
-    border-radius: 5px;
-} */
-
-/* 
+main > div img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
 
 .label {
-    display: none;
-    position: absolute;
-    top: 40%;
-    left: 40%;
-} */
-/* 
-.button {
-    display: inline-block;
-    border: 2px solid #000;
-    padding: 5px;
-    border-radius: 25px;
+  font-weight: bold;
+  margin-top: 10px;
 }
- */
-/* 
-.button:hover {
-    background-color:#fff;
-} */
 
-/* 
-footer {
-    display: flex;
+/* Tablet View: 772px and up */
+@media (min-width: 772px) {
+  main {
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
-} */
+  }
 
-/* 
-header {
-    border-radius: 5px;
-    border: 5px #000 solid;
-    margin: 10px;
-} */
+  main > div {
+    width: 45vw;
+  }
 
-/* 
-.label {
-    display: none;
-    position: absolute;
-    top: 40%;
-    left: 40%;
-} */
-/* 
-.child:hover .label {
-    display: block;
-} */
+  main > div img {
+    max-height: 30vh;
+    object-fit: cover;
+  }
+}
+
+/* Large Screen View: 998px and up */
+@media (min-width: 998px) {
+  main > div {
+    width: 30vw;
+  }
+}
